--- a/thesis.bib
+++ b/thesis.bib
@@ -1876,3 +1876,41 @@ A technique for developing specific and potent enzyme inhibitors is validated on
 	pages = {47938--47945},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/Z322M7BU/Bencsath et al. - 2002 - Identification of a Multifunctional Binding Site o.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/QGUDH47U/47938.html:text/html}
 }
+
+@article{cappadocia_structural_2015,
+	title = {Structural basis for catalytic activation by the human {ZNF}451 {SUMO} {E}3 ligase},
+	volume = {22},
+	copyright = {© 2015 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1545-9993},
+	url = {http://www.nature.com/nsmb/journal/v22/n12/full/nsmb.3116.html},
+	doi = {10.1038/nsmb.3116},
+	abstract = {E3 protein ligases enhance transfer of ubiquitin-like (Ubl) proteins from E2 conjugating enzymes to substrates by stabilizing the thioester-charged E2{\textasciitilde}Ubl in a closed configuration optimally aligned for nucleophilic attack. Here, we report biochemical and structural data that define the N-terminal domain of the Homo sapiens ZNF451 as the catalytic module for SUMO E3 ligase activity. The ZNF451 catalytic module contains tandem SUMO-interaction motifs (SIMs) bridged by a Pro-Leu-Arg-Pro (PLRP) motif. The first SIM and PLRP motif engage thioester-charged E2{\textasciitilde}SUMO while the next SIM binds a second molecule of SUMO bound to the back side of E2. We show that ZNF451 is SUMO2 specific and that SUMO modification of ZNF451 may contribute to activity by providing a second molecule of SUMO that interacts with E2. Our results are consistent with ZNF451 functioning as a bona fide SUMO E3 ligase.},
+	language = {en},
+	number = {12},
+	urldate = {2017-02-27},
+	journal = {Nature Structural \& Molecular Biology},
+	author = {Cappadocia, Laurent and Pichler, Andrea and Lima, Christopher D.},
+	month = dec,
+	year = {2015},
+	keywords = {biochemistry, structural biology, X-ray Crystallography},
+	pages = {968--975},
+	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/Q6XG646Z/nsmb.3116.html:text/html}
+}
+
+@article{su_phosphorylation_2012,
+	title = {Phosphorylation of {Ubc}9 by {Cdk}1 {Enhances} {SUMOylation} {Activity}},
+	volume = {7},
+	issn = {1932-6203},
+	url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0034250},
+	doi = {10.1371/journal.pone.0034250},
+	abstract = {Increasing evidence has pointed to an important role of SUMOylation in cell cycle regulation, especially for M phase. In the current studies, we have obtained evidence through in vitro studies that the master M phase regulator CDK1/cyclin B kinase phosphorylates the SUMOylation machinery component Ubc9, leading to its enhanced SUMOylation activity. First, we show that CDK1/cyclin B, but not many other cell cycle kinases such as CDK2/cyclin E, ERK1, ERK2, PKA and JNK2/SAPK1, specifically enhances SUMOylation activity. Second, CDK1/cyclin B phosphorylates the SUMOylation machinery component Ubc9, but not SAE1/SAE2 or SUMO1. Third, CDK1/cyclin B-phosphorylated Ubc9 exhibits increased SUMOylation activity and elevated accumulation of the Ubc9-SUMO1 thioester conjugate. Fourth, CDK1/cyclin B enhances SUMOylation activity through phosphorylation of Ubc9 at serine 71. These studies demonstrate for the first time that the cell cycle-specific kinase CDK1/cyclin B phosphorylates a SUMOylation machinery component to increase its overall SUMOylation activity, suggesting that SUMOylation is part of the cell cycle program orchestrated by CDK1 through Ubc9.},
+	number = {4},
+	urldate = {2017-02-27},
+	journal = {PLOS ONE},
+	author = {Su, Yee-Fun and Yang, Tsunghan and Huang, Hoting and Liu, Leroy F. and Hwang, Jaulang},
+	month = apr,
+	year = {2012},
+	keywords = {Autoradiography, Cell cycle and cell division, Immunoblotting, In vitro kinase assay, Mitosis, Phosphorylation, Serine, Sumoylation},
+	pages = {e34250},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/HBU7XM74/Su et al. - 2012 - Phosphorylation of Ubc9 by Cdk1 Enhances SUMOylati.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WE68UKBI/article.html:text/html}
+}
