--- a/thesis.bib
+++ b/thesis.bib
@@ -1914,3 +1914,22 @@ A technique for developing specific and potent enzyme inhibitors is validated on
 	pages = {e34250},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/HBU7XM74/Su et al. - 2012 - Phosphorylation of Ubc9 by Cdk1 Enhances SUMOylati.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WE68UKBI/article.html:text/html}
 }
+
+@article{hietpas_experimental_2011,
+	title = {Experimental illumination of a fitness landscape},
+	volume = {108},
+	issn = {0027-8424, 1091-6490},
+	url = {http://www.pnas.org/content/108/19/7896},
+	doi = {10.1073/pnas.1016024108},
+	abstract = {The genes of all organisms have been shaped by selective pressures. The relationship between gene sequence and fitness has tremendous implications for understanding both evolutionary processes and functional constraints on the encoded proteins. Here, we have exploited deep sequencing technology to experimentally determine the fitness of all possible individual point mutants under controlled conditions for a nine-amino acid region of Hsp90. Over the past five decades, limited glimpses into the relationship between gene sequence and function have sparked a long debate regarding the distribution, relative proportion, and evolutionary significance of deleterious, neutral, and advantageous mutations. Our systematic experimental measurement of fitness effects of Hsp90 mutants in yeast, evaluated in the light of existing population genetic theory, are remarkably consistent with a nearly neutral model of molecular evolution.},
+	language = {en},
+	number = {19},
+	urldate = {2017-02-28},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Hietpas, Ryan T. and Jensen, Jeffrey D. and Bolon, Daniel N. A.},
+	month = may,
+	year = {2011},
+	pmid = {21464309},
+	pages = {7896--7901},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/N6SEVIHB/Hietpas et al. - 2011 - Experimental illumination of a fitness landscape.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7969GPBP/7896.html:text/html}
+}
